<resources>
    <string name="app_name">Instagram</string>
    <string name="from">from</string>
    <string name="facebook">FACEBOOK</string>
    <string name="loginHint">Telefon numarası, e-posta adresi veya kullanıcı adı</string>
    <string name="sifreHint">Şifre</string>
    <string name="btnGiris">Giriş Yap</string>
    <string name="girisYardim">Giriş detaylarını mı unuttun?</string>
    <string name="girisYardimLink">Giriş yapmak için yardım al.</string>
    <string name="textYada">YA DA</string>
    <string name="girisWithFacebook">Facebook ile Giriş Yap</string>
    <string name="textKayit">Hesabın yok mu?</string>
    <string name="textKayitLink">Kaydol.</string>
    <string name="textFacebookGiris">Facebook ile Giriş Yap</string>
    <string name="EmailOrUsernameText">E-posta adresi ile kayıt ol</string>
    <string name="hesabinVarMi">Hesabın zaten var mı?</string>
    <string name="girisYap">Giriş yap.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telefon">Telefon</string>
    <string name="email">E-POSTA</string>
    <string name="emailHint">E-posta</string>
    <string name="ileri">İleri</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="fullName">Ad Soyad</string>
    <string name="password">Şifre</string>
    <string name="confirmPassword">Şifre Onay</string>
    <string name="kayitOl">Kayıt Ol</string>
    <string name="ara">Ara</string>
    <string name="following">Takip ediliyor</string>
    <string name="follow">Takip et</string>
</resources>