<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ac_secondRegister_etEmail"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_300sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/emailHint"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/ac_secondRegister_btnIleri"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/ileri"
            android:background="@drawable/button_background"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ac_secondRegister_etEmail"
            android:layout_marginTop="@dimen/_13sdp"
            android:textColor="@color/btnGirisHint"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_76sdp"
            android:background="@color/viewColor"
            android:layout_below="@id/ac_secondRegister_btnIleri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_90sdp"
            android:text="@string/hesabinVarMi"
            android:layout_below="@id/ac_secondRegister_btnIleri"
            android:textColor="@color/gray"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/ac_register_txtGirisYap"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_181sdp"
            android:layout_marginTop="@dimen/_90sdp"
            android:layout_below="@id/ac_secondRegister_btnIleri"
            android:text="@string/girisYap"
            android:textColor="@color/textLinkColor"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>