<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/ac_login_imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/loginlogo"
            android:layout_marginTop="@dimen/_65sdp" />
        
        <EditText
            android:id="@+id/ac_login_etUsername"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/ac_login_imgLogo"
            android:hint="@string/loginHint"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_background"
            android:paddingStart="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/ac_login_etSifre"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/ac_login_etUsername"
            android:hint="@string/sifreHint"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_background"
            android:paddingStart="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_15sdp" />

        <Button
            android:id="@+id/ac_login_btnGirisYap"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@id/ac_login_etSifre"
            android:hint="@string/btnGiris"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp" />


    </RelativeLayout>

</LinearLayout>